@@ -1,3 +1,8 @@
+Wed Jul 21 17:06:14 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* n-mod-group-by.rb: marshalでエラーが出ることがあるので, その時の
+	  処理を追加
+
 Wed Jul 14 18:54:39 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* n-mod-group-by.rb: REQ#235対応 その5(ばぐがいっぱいあった)
